[project]
name = "ansr-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.2",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "matplotlib>=3.10.7",
    "pydantic>=2.12.0",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "pandas>=2.2.0",
    "uvicorn>=0.37.0",
    "supabase>=2.24.0",
]
